# yet-another-gpt

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/yetanothergpt/: __init__.py  gpt.py
